--- a/app/views/settings/_slack_settings.html.erb
+++ b/app/views/settings/_slack_settings.html.erb
@@ -36,6 +36,11 @@
 </p>
 
 <p>
+	<label for="settings_post_daily_reports">Post Daily Reports?</label>
+	<input type="checkbox" id="settings_post_daily_reports" value="1" name="settings[post_daily_reports]" <%= settings['post_daily_reports'] == '1' ? 'checked="checked"' : '' %> />
+</p>
+
+<p>
 	<label for="settings_post_updates">Post Issue Updates?</label>
 	<input type="checkbox" id="settings_post_updates" value="1" name="settings[post_updates]" <%= settings['post_updates'] == '1' ? 'checked="checked"' : '' %> />
 </p>
@@ -44,3 +49,4 @@
 	<label for="settings_post_wiki_updates">Post Wiki Updates?</label>
 	<input type="checkbox" id="settings_post_wiki_updates" value="1" name="settings[post_wiki_updates]" <%= settings['post_wiki_updates'] == '1' ? 'checked="checked"' : '' %> />
 </p>
+
